--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                         <li><a class="linkedin" aria-label="LinkedIn"
                                                         href="https://www.linkedin.com/in/aman-kumar-yadav-b7a715296/"
                                                         target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                                        <li><a class="github" aria-label="GitHub" href="https://github.com/skysingh05"
+                                        <li><a class="github" aria-label="GitHub" href="https://github.com/amanyadav177"
                                                         target="_blank"><i class="fab fa-github"></i></a></li>
                                 </ul>
                         </div>
