--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                                 <img draggable="false" class="tilt" src="./icons/profile.jpg" alt="">
                         </div>
                         <div class="content">
-                                <h3>I'm Aky</h3>
+                                <h3>I'm Aman Kumar Yadav</h3>
                                 <span class="tag">web Developer</span>
 
                                 <p>
@@ -87,7 +87,7 @@
                                 </div>
 
                                 <div class="resumebtn">
-                                        <a href="https://drive.google.com/file/d/1KbT_JIHnVtCFR4vhtfhCN70IuDSFmxC6/view?usp=sharing"
+                                        <a href="./AmanResume.pdf"
                                                 target="_blank" class="btn"><span>Resume</span>
                                                 <i class="fas fa-chevron-right"></i>
                                         </a>
