--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
                                                         feel of the Instagram interface but does not include any dynamic
                                                         functionalities or backend processes. </p>
                                                 <div class="btns">
-                                                        <a href="https://github.com/skysingh05/InstaClone" class="btn"
+                                                        <a href="https://amanyadav177.github.io/InstaClone/" class="btn"
                                                                 target="_blank"><i class="fas fa-eye"></i> View</a>
-                                                        <a href="https://github.com/skysingh05/InstaClone" class="btn"
+                                                        <a href="https://github.com/amanyadav177/InstaClone.git" class="btn"
                                                                 target="_blank">Code <i class="fas fa-code"></i></a>
                                                 </div>
                                         </div>
